package org.learningu.scheduling.graph;

/*
 * A course in an LU program.  Courses may have estimated and maximum class sizes,
 * room requirements, and teachers.
 */
message SerialCourse {
	required int32 courseId = 1;
	optional string courseTitle = 2;
	repeated int32 teacherIds = 3 [packed = true];
	optional int32 estimatedClassSize = 5 [default = 15];
	optional int32 maxClassSize = 6 [default = 20];
}

/*
 * A teacher at an LU program.  Teachers may not be available for all time blocks.
 */
message SerialTeacher {
	required int32 teacherId = 1; // teacher identifier number
	optional string name = 2; // teacher name
	repeated int32 availableBlocks = 3 [packed = true]; // teacher availability
}

/*
 * A block of time at an LU program, during which a single course may be scheduled.
 */
message SerialTimeBlock {
	// TODO: multi-block class support; multi-day program support
	required int32 blockId = 1;
	optional string description = 2;
}

/*
 * A room at an LU program with possibly some associated properties.
 */
message SerialRoom {
	required int32 roomId = 1;
	optional string name = 3;
	optional int32 capacity = 4 [default = 25];
	repeated int32 availableBlocks = 5 [packed = true];
}

/*
 * A specification for an entire LU program, from which a schedule must be constructed.
 */
message SerialProgram {
	optional string name = 5 [default = ""];
	repeated SerialTimeBlock timeBlocks = 1;
	repeated SerialTeacher teachers = 2;
	repeated SerialCourse courses = 3;
	repeated SerialRoom rooms = 4;
}

/*
 * An entire schedule for an LU program.
 */
message SerialSchedule {

	/*
	 * An assignment of a course to a room and time.
 	 */
	message SerialScheduleAssignment {
		required int32 timeBlockId = 1;
		required int32 roomId = 2;
		required int32 courseId = 3;
	}

	repeated SerialScheduleAssignment assignments = 1;
}